# Velocity-Voice-AI

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  test_retrieve.py
cache_sync/: README.md  __init__.py  __main__.py  config.py  event_consumer.py  handler.py  main.py
config/: logger.py  settings.py
src/: api.py  demo.py  main.py
src/agent/: __init__.py  chroma_service.py  llm.py  nodes.py  retriever.py  transcribe.py  tts.py  workflow.py
src/api/: websocket.py
src/core/: cache.py  config.py  health.py  logger.py  session.py
src/events/: __init__.py  publisher.py  schema.py
src/processor/: delta_worker.py  text_formatter.py
src/scraper/: detail_scraper.py  inventory_scraper.py
src/services/: stt.py  tts.py
src/storage/: vector_store.py
